Created branch gh-pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name='viewport' content='width=700'>
       <link href="/icons/blacktocat.png" rel="icon" type="image/x-icon" />
       <link rel="home index"      href="/" type="text/html">
-      <script type="text/javascript" src="http://code.jquery.com/jquery-1.2.3.js"></script>
+      <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.2.3.js"></script> -->
 </head>
 
 <body>
