Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,78 +1,79 @@
-<html lang='en'>
-<head>
-<title>Facundo Farias</title>
-      <meta http-equiv='Content-Type' content='text/html;charset=utf-8'>
-      <meta http-equiv='X-UA-Compatible' content='YOUR MOM'>
-      <meta name='viewport' content='width=700'>
-      <link href="/icons/blacktocat.png" rel="icon" type="image/x-icon" />
-      <link rel="home index"      href="/" type="text/html">
-      <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.2.3.js"></script> -->
-</head>
+<!DOCTYPE html>
+<html>
 
-<body>
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Facundofarias : " />
 
-<div id='container'>
-  <div id='header' class='about'>
-    <h1>
-      <center> Hi there! I am Facundo.</center>
-    </h1>
-  </div>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-<div class='about'>
-  <center>
-  <img
-    src='http://en.gravatar.com/userimage/52810316/18b89884c7c0f44b5676de278cc5ae1b.jpg?size=200'
-    alt="stackin paper"
-  >
-<div class='overview'>
-   <p>
-    <strong>
-    <center>
-    <h3><dl><p>
-	   <a href="http://ar.linkedin.com/pub/facundo-farias/19/a13/a99/en" target="_blank">
-        <img
-          src='http://www.enterprise-europe-scotland.com/ckfinder/userfiles/images/linkedin-logo.png'
-          alt="instagram favicon"
-          height='40'
-          width='40'>
-      </a>
-      <a href="http://instagram.com/facundis" target="_blank">
-        <img
-          src='http://d36xtkk24g8jdx.cloudfront.net/bluebar/51a117b/images/ico/favicon.ico'
-          alt="instagram favicon"
-          height='40'
-          width='40'>
-      </a>
-      <a href="https://twitter.com/facundofarias" target="_blank">
-        <img
-          src='http://www.naccrra.org/sites/default/files/default_site_pages/2013/twitterbig.png'
-          alt='twitter favicon'
-          height='40'
-          width='40'>
-      </a>
-      <a href="https://github.com/facundofarias" target="_blank">
-        <img
-          src='http://t0.gstatic.com/images?q=tbn:ANd9GcQhULB_o4AsIGWmlkbM6NYFvZAMjaETa0Cd4spmWAn-8l6IcLZfGw'
-          alt="github favicon"
-          height='40'
-          width='40'>
-      </a>
-      <a href="http://www.slideshare.net/facundis" target="_blank">
-        <img
-          src='http://exploringmajors.unt.edu/sites/default/files/slideshare_icon.png'
-          alt='songkick img'
-          height='40'
-          width='40'>
-      </a>
+    <title>Facundofarias</title>
+  </head>
 
-       <p><strong>facundo.farias@gmail.com</strong></p>
-            </dl></h3>
-           </strong>
-     </center>
-     </div>
-   </p>
+  <body>
 
-<script>
-</script>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/facundofarias/facundofarias">View on GitHub</a>
 
-</body>
+          <h1 id="project_title">Facundofarias</h1>
+          <h2 id="project_tagline"></h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/facundofarias/facundofarias/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/facundofarias/facundofarias/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
+
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Facundofarias maintained by <a href="https://github.com/facundofarias">facundofarias</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
+</html>
