first push -> fresh version

--- a/index.html
+++ b/index.html
@@ -1,78 +1,132 @@
-<html lang='en'>
-<head>
-<title>Facundo Farias</title>
-      <meta http-equiv='Content-Type' content='text/html;charset=utf-8'>
-      <meta http-equiv='X-UA-Compatible' content='YOUR MOM'>
-      <meta name='viewport' content='width=700'>
-      <link href="/icons/blacktocat.png" rel="icon" type="image/x-icon" />
-      <link rel="home index"      href="/" type="text/html">
-      <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.2.3.js"></script> -->
+<!DOCTYPE html>
+<!-- saved from url=(0023)https://bensmann.no/cv/ -->
+<html class=" js csstransitions"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="utf-8">
+<!--[if ie]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<title>Facundo Farias - CV made with HTML5 and CSS3</title>
+<link rel="stylesheet" href="./css/style.css">
+<link href="./css/css" rel="stylesheet" type="text/css">
+<script src="./js/jquery.min.js"></script><style type="text/css"></style>
+<script src="./js/script.js"></script>
+<!--[if lt IE 9]>
+		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 </head>
-
 <body>
+<div class="container">
+<header class="twelve columns">
+<h1>Facundo Farias <span>Software Engineer</span>
+</h1>
+</header>
+<section id="personaldata">
+<ul>
+<li class="four columns date"><span class="info">Born<span>February 11th 1985</span></span></li>
+<li class="four columns location"><span class="info">Location<span>Cordoba, AR</span></span></li>
+<li class="four columns phone"><span class="info">Phone nr.<span>+54 93513 938657</span></span></li>
+</ul>
+</section>
+<section id="about" class="six columns">
+<article class="left">
+<header>
+<h2>About me</h2>
+</header>
+<p>I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="https://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then to <a href="https://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
+<p>About me, I can say that I am a passionate developer, that enjoys the agile practices and that it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
+</article>
+<article class="left">
+<header>
+<h2>About this page</h2>
+</header>
+<p>A few months ago I realized that <a href="https://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
+<ul>
+<li>It is open source.</li>
+<li>The page was written purely on HTML5 code.</li>
+<li>JavaScript, jQuery and Modernizr are used.</li>
+<li>It has a responsive design that works for PC but also mobile.</li>
+</ul>
+</article>
+</section>
+<section id="programming" class="six columns float-right">
+<article class="right">
+<header>
+<h2>Programming knowledge</h2>
+</header>
+<p>Below is a list of programming languages, trends and frameworks that I know and have used the most - in regards to web development.</p>
+<ul>
+<li data-score="85" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
+<li data-score="75" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
+<li data-score="65" style="background-color: rgb(30, 107, 105);"><span>JS</span></li>
+<li data-score="55" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
+<li data-score="45" style="background-color: rgb(40, 117, 95);"><span>C++</span></li>
+<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+</ul>
+</article>
+</section>
+<div id="history" class="clearfix">
+<section class="six columns">
+<article class="left">
+<header>
+<h2>Work experience</h2>
+</header>
+<ul>
+<li><span class="year">01.11</span><span>Hired as Software Engineer , <a href="https://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
+<li><span class="year">02.08</span><span>Moved on the same company to the IT Department, as a Programmer Analyst.</span></li>
+<li><span class="year">12.02</span><span>Started working on <a href="https://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a administrative employee.</span></li>
+</ul>
+</article>
+</section>
+<section class="six columns">
+<article class="right">
+<header>
+<h2>Education</h2>
+</header>
+<ul>
+<li><span class="year">2010<span>- 2011</span></span><span>English Upper Intermediate Course. UNC, Cordoba, AR.</span></li>
+<li><span class="year">2003 <span>- 2010</span></span><span>Bachelor's Degree - System Engineer. UTN FRC, Cordoba, AR</span></li>
+</ul>
+</article>
+</section>
+</div>
+<section id="languages" class="six columns">
+<article class="left">
+<header>
+<h2>Languages</h2>
+</header>
+<p>I speak two languages ​​fluently and can make myself understood in a three, as you can see below: </p>
+<ul>
+<li data-score="100">
+<div style="background-color: rgb(50, 127, 85); height: 76.5%;"></div>
+<span>Spanish</span>
+</li>
+<li data-score="85">
+<div style="background-color: rgb(75, 152, 60); height: 85%;"></div>
+<span>English</span>
+</li>
+<li data-score="60">
+<div style="background-color: rgb(100, 177, 35); height: 42.5%;"></div>
+<span>Portuguese</span>
+</li>
+</ul>
+</article>
+</section>
+<section id="contact" class="six columns">
+<article class="right">
+<header>
+<h2>Contact</h2>
+</header>
+<p>If you would like to contact me, these are the options that you have:</p>
+<ul>
+<li class="twitter"><a href="https://twitter.com/facundofarias">Twitter<span>@facundofarias</span></a></li>
+<li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>
+<li class="mail"><a href="mailto:facundo.farias@gmail.com">Email<span>facundo.farias@gmail.com</span></a></li>
+</ul>
+</article>
+</section>
+</div>
 
-<div id='container'>
-  <div id='header' class='about'>
-    <h1>
-      <center> Hi there! I am Facundo.</center>
-    </h1>
-  </div>
 
-<div class='about'>
-  <center>
-  <img
-    src='http://en.gravatar.com/userimage/52810316/18b89884c7c0f44b5676de278cc5ae1b.jpg?size=200'
-    alt="stackin paper"
-  >
-<div class='overview'>
-   <p>
-    <strong>
-    <center>
-    <h3><dl><p>
-	   <a href="http://ar.linkedin.com/pub/facundo-farias/19/a13/a99/en" target="_blank">
-        <img
-          src='http://www.enterprise-europe-scotland.com/ckfinder/userfiles/images/linkedin-logo.png'
-          alt="instagram favicon"
-          height='40'
-          width='40'>
-      </a>
-      <a href="http://instagram.com/facundis" target="_blank">
-        <img
-          src='http://d36xtkk24g8jdx.cloudfront.net/bluebar/51a117b/images/ico/favicon.ico'
-          alt="instagram favicon"
-          height='40'
-          width='40'>
-      </a>
-      <a href="https://twitter.com/facundofarias" target="_blank">
-        <img
-          src='http://www.naccrra.org/sites/default/files/default_site_pages/2013/twitterbig.png'
-          alt='twitter favicon'
-          height='40'
-          width='40'>
-      </a>
-      <a href="https://github.com/facundofarias" target="_blank">
-        <img
-          src='http://t0.gstatic.com/images?q=tbn:ANd9GcQhULB_o4AsIGWmlkbM6NYFvZAMjaETa0Cd4spmWAn-8l6IcLZfGw'
-          alt="github favicon"
-          height='40'
-          width='40'>
-      </a>
-      <a href="http://www.slideshare.net/facundis" target="_blank">
-        <img
-          src='http://exploringmajors.unt.edu/sites/default/files/slideshare_icon.png'
-          alt='songkick img'
-          height='40'
-          width='40'>
-      </a>
-
-       <p><strong>facundo.farias@gmail.com</strong></p>
-            </dl></h3>
-           </strong>
-     </center>
-     </div>
-   </p>
-
-<script>
-</script>
-
-</body>
+</body></html>
