Some fixes on the url

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 <header>
 <h2>About me</h2>
 </header>
-<p>I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="https://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then to <a href="https://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
+<p>I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
 <p>About me, I can say that I am a passionate developer, that enjoys the agile practices and that it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
 </article>
 <article class="left">
 <header>
 <h2>About this page</h2>
 </header>
-<p>A few months ago I realized that <a href="https://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
+<p>A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
 <ul>
 <li>It is open source.</li>
 <li>The page was written purely on HTML5 code.</li>
@@ -72,9 +72,9 @@
 <h2>Work experience</h2>
 </header>
 <ul>
-<li><span class="year">01.11</span><span>Hired as Software Engineer , <a href="https://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
+<li><span class="year">01.11</span><span>Hired as Software Engineer , <a href="http://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
 <li><span class="year">02.08</span><span>Moved on the same company to the IT Department, as a Programmer Analyst.</span></li>
-<li><span class="year">12.02</span><span>Started working on <a href="https://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a administrative employee.</span></li>
+<li><span class="year">12.02</span><span>Started working on <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a administrative employee.</span></li>
 </ul>
 </article>
 </section>
