--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 <header>
 <h2>About me</h2>
 </header>
-<p>I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
-<p>About me, I can say that I am a passionate developer, that enjoys the agile practices and that it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
+<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
+<p class="info">About me, I can say that I am a passionate developer, that enjoys the agile practices and that it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
 </article>
 <article class="left">
 <header>
 <h2>About this page</h2>
 </header>
-<p>A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
+<p class="info">A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
 <ul>
-<li>It is open source.</li>
-<li>The page was written purely on HTML5 code.</li>
-<li>JavaScript, jQuery and Modernizr are used.</li>
-<li>It has a responsive design that works for PC but also mobile.</li>
+<li class="info">It's open source available on <a href="http://www.github.com/">GitHub</a>.</li>
+<li class="info">The page was written purely on HTML5 code.</li>
+<li class="info">JavaScript, jQuery and Modernizr are used.</li>
+<li class="info">It has a responsive design that works for PC but also mobile.</li>
 </ul>
 </article>
 </section>
@@ -51,7 +51,7 @@
 <header>
 <h2>Programming knowledge</h2>
 </header>
-<p>Below is a list of programming languages, trends and frameworks that I know and have used the most - in regards to web development.</p>
+<p class="info">Below is a list of programming languages, trends and frameworks that I know and have used the most - in regards to web development.</p>
 <ul>
 <li data-score="85" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
 <li data-score="75" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
@@ -59,9 +59,9 @@
 <li data-score="55" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
 <li data-score="45" style="background-color: rgb(40, 117, 95);"><span>C++</span></li>
 <li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
-<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
-<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
-<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+<li data-score="55" style="background-color: rgb(60, 137, 75);"><span>Native Apps (Android)</span></li>
+<li data-score="60" style="background-color: rgb(60, 137, 75);"><span>Web Apps</span></li>
+<li data-score="75" style="background-color: rgb(60, 137, 75);"><span>API Design</span></li>
 </ul>
 </article>
 </section>
@@ -95,7 +95,7 @@
 <header>
 <h2>Languages</h2>
 </header>
-<p>I speak two languages ​​fluently and can make myself understood in a three, as you can see below: </p>
+<p class="info">I speak two languages ​​fluently and can make myself understood in a three, as you can see below: </p>
 <ul>
 <li data-score="100">
 <div style="background-color: rgb(50, 127, 85); height: 76.5%;"></div>
@@ -117,7 +117,7 @@
 <header>
 <h2>Contact</h2>
 </header>
-<p>If you would like to contact me, these are the options that you have:</p>
+<p class="info">If you would like to contact me, these are the options that you have:</p>
 <ul>
 <li class="twitter"><a href="https://twitter.com/facundofarias">Twitter<span>@facundofarias</span></a></li>
 <li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>
