--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h2>About me</h2>
 </header>
 <p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
-<p class="info">About me, I can say that I am a passionate developer, that enjoys the agile practices and that it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
+<p class="info">About me, I can say that I am a passionate developer, who enjoys the agile practices and who it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
 </article>
 <article class="left">
 <header>
