Changed css styles / css sprites.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </header>
 <p class="info">A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
 <ul>
-<li class="info">It's open source available on <a href="http://www.github.com/">GitHub</a>.</li>
+<li class="info">It's open source available on <a href="http://github.com/facundofarias/facundofarias.github.io">GitHub</a>.</li>
 <li class="info">The page was written purely on HTML5 code.</li>
 <li class="info">JavaScript, jQuery and Modernizr are used.</li>
 <li class="info">It has a responsive design that works for PC but also mobile.</li>
@@ -85,7 +85,7 @@
 </header>
 <ul>
 <li><span class="year">2010<span>- 2011</span></span><span>English Upper Intermediate Course. UNC, Cordoba, AR.</span></li>
-<li><span class="year">2003 <span>- 2010</span></span><span>Bachelor's Degree - System Engineer. UTN FRC, Cordoba, AR</span></li>
+<li><span class="year">2003 <span>- 2010</span></span><span>Bachelor's Degree - Systems Engineer. UTN FRC, Cordoba, AR</span></li>
 </ul>
 </article>
 </section>
@@ -98,7 +98,7 @@
 <p class="info">I speak two languages ​​fluently and can make myself understood in a three, as you can see below: </p>
 <ul>
 <li data-score="100">
-<div style="background-color: rgb(50, 127, 85); height: 76.5%;"></div>
+<div style="background-color: rgb(50, 127, 85); height: 100%;"></div>
 <span>Spanish</span>
 </li>
 <li data-score="85">
@@ -106,7 +106,7 @@
 <span>English</span>
 </li>
 <li data-score="60">
-<div style="background-color: rgb(100, 177, 35); height: 42.5%;"></div>
+<div style="background-color: rgb(100, 177, 35); height: 60%;"></div>
 <span>Portuguese</span>
 </li>
 </ul>
@@ -120,8 +120,11 @@
 <p class="info">If you would like to contact me, these are the options that you have:</p>
 <ul>
 <li class="twitter"><a href="https://twitter.com/facundofarias">Twitter<span>@facundofarias</span></a></li>
-<li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>
+<!--<li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>-->
 <li class="mail"><a href="mailto:facundo.farias@gmail.com">Email<span>facundo.farias@gmail.com</span></a></li>
+<li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en">LinkedIn<span>Facundo Farias</span></a></li>
+<li class="skype"><a href="https://www.skype.com">Skype<span>facundo.farias</span></a></li>
+<li class="cv"><a href="./downloads/Resume_FF_2014.pdf">Resume<span>Download CV</span></a></li>
 </ul>
 </article>
 </section>
