--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <li class="mail"><a href="mailto:facundo.farias@gmail.com">Email<span>facundo.farias@gmail.com</span></a></li>
 <li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en">LinkedIn<span>Facundo Farias</span></a></li>
 <li class="skype"><a href="https://www.skype.com">Skype<span>facundo.farias</span></a></li>
-<li class="cv"><a href="./downloads/Resume_FF_2014.pdf">Resume<span>Download CV</span></a></li>
+<li class="cv"><a href="./downloads/Resume_FF_2014.pdf">Resume<span>Download</span></a></li>
 </ul>
 </article>
 </section>
