--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h2>About me</h2>
 </header>
 <p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
-<p class="info">About me, I can say that I am a passionate developer, who enjoys the agile practices and who it is always willing to learn new technologies. Additionally, I my spend time acquiring more knowledge within the scope of web development.</p>
+<p class="info">About me, I can say that I am a passionate developer, who enjoys the agile practices and who is always willing to learn new technologies. Additionally, I spend my time acquiring more knowledge within the scope of web development.</p>
 </article>
 <article class="left">
 <header>
@@ -72,9 +72,9 @@
 <h2>Work experience</h2>
 </header>
 <ul>
-<li><span class="year">01.11</span><span>Hired as Software Engineer , <a href="http://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
-<li><span class="year">02.08</span><span>Moved on the same company to the IT Department, as a Programmer Analyst.</span></li>
-<li><span class="year">12.02</span><span>Started working on <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a administrative employee.</span></li>
+<li><span class="year">01.11</span><span>Hired as Software Engineer at <a href="http://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
+<li><span class="year">02.08</span><span>Moved in the same company to the IT Department, as a Programmer Analyst.</span></li>
+<li><span class="year">12.02</span><span>Started working on <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as an administrative employee.</span></li>
 </ul>
 </article>
 </section>
@@ -95,7 +95,7 @@
 <header>
 <h2>Languages</h2>
 </header>
-<p class="info">I speak two languages ​​fluently and can make myself understood in a three, as you can see below: </p>
+<p class="info">I speak two languages ​​fluently and can make myself understood in three, as you can see below: </p>
 <ul>
 <li data-score="100">
 <div style="background-color: rgb(50, 127, 85); height: 100%;"></div>
