--- a/index.html
+++ b/index.html
@@ -1,134 +1,135 @@
 <!DOCTYPE html>
 <html class=" js csstransitions"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta charset="utf-8">
-<!--[if ie]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<title>Facundo Farias - CV made with HTML5 and CSS3</title>
-<link rel="stylesheet" href="./css/style.css">
-<link href="./css/css" rel="stylesheet" type="text/css">
-<script src="./js/jquery.min.js"></script><style type="text/css"></style>
-<script src="./js/script.js"></script>
-<!--[if lt IE 9]>
-		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+	<meta charset="utf-8">
+	<!--[if ie]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title>Facundo Farias - CV made with HTML5 and CSS3</title>
+	<link rel="stylesheet" href="./css/style.css">
+	<link href="./css/css" rel="stylesheet" type="text/css">
+	<script src="./js/jquery.min.js"></script><style type="text/css"></style>
+	<script src="./js/script.js"></script>
+	<!--[if lt IE 9]>
+	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
 </head>
 <body>
-<div class="container">
-<header class="twelve columns">
-<h1>Facundo Farias <span>Software Engineer</span>
-</h1>
-</header>
-<section id="personaldata">
-<ul>
-<li class="four columns date"><span class="info">Born<span>February 11th 1985</span></span></li>
-<li class="four columns location"><span class="info">Location<span>Cordoba, AR</span></span></li>
-<li class="four columns phone"><span class="info">Phone nr.<span>+54 93513 938657</span></span></li>
-</ul>
-</section>
-<section id="about" class="six columns">
-<article class="left">
-<header>
-<h2>About me</h2>
-</header>
-<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer .</p>
-<p class="info">About me, I can say that I am a passionate developer, who enjoys the agile practices and who is always willing to learn new technologies. Additionally, I spend my time acquiring more knowledge within the scope of web development.</p>
-</article>
-<article class="left">
-<header>
-<h2>About this page</h2>
-</header>
-<p class="info">A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
-<ul>
-<li class="info">It's open source available on <a href="http://github.com/facundofarias/facundofarias.github.io">GitHub</a>.</li>
-<li class="info">The page was written purely on HTML5 code.</li>
-<li class="info">JavaScript, jQuery and Modernizr are used.</li>
-<li class="info">It has a responsive design that works for PC but also mobile.</li>
-</ul>
-</article>
-</section>
-<section id="programming" class="six columns float-right">
-<article class="right">
-<header>
-<h2>Programming knowledge</h2>
-</header>
-<p class="info">Below is a list of programming languages, trends and frameworks that I know and have used the most - in regards to web development.</p>
-<ul>
-<li data-score="85" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
-<li data-score="75" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
-<li data-score="65" style="background-color: rgb(30, 107, 105);"><span>JS</span></li>
-<li data-score="55" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
-<li data-score="45" style="background-color: rgb(40, 117, 95);"><span>C++</span></li>
-<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
-<li data-score="55" style="background-color: rgb(60, 137, 75);"><span>Native Apps (Android)</span></li>
-<li data-score="60" style="background-color: rgb(60, 137, 75);"><span>Web Apps</span></li>
-<li data-score="75" style="background-color: rgb(60, 137, 75);"><span>API Design</span></li>
-</ul>
-</article>
-</section>
-<div id="history" class="clearfix">
-<section class="six columns">
-<article class="left">
-<header>
-<h2>Work experience</h2>
-</header>
-<ul>
-<li><span class="year">01.11</span><span>Hired as Software Engineer at <a href="http://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
-<li><span class="year">02.08</span><span>Moved in the same company to the IT Department, as a Programmer Analyst.</span></li>
-<li><span class="year">12.02</span><span>Started working on <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as an administrative employee.</span></li>
-</ul>
-</article>
-</section>
-<section class="six columns">
-<article class="right">
-<header>
-<h2>Education</h2>
-</header>
-<ul>
-<li><span class="year">2010<span>- 2011</span></span><span>English Upper Intermediate Course. UNC, Cordoba, AR.</span></li>
-<li><span class="year">2003 <span>- 2010</span></span><span>Bachelor's Degree - Systems Engineer. UTN FRC, Cordoba, AR</span></li>
-</ul>
-</article>
-</section>
-</div>
-<section id="languages" class="six columns">
-<article class="left">
-<header>
-<h2>Languages</h2>
-</header>
-<p class="info">I speak two languages ​​fluently and can make myself understood in three, as you can see below: </p>
-<ul>
-<li data-score="100">
-<div style="background-color: rgb(50, 127, 85); height: 100%;"></div>
-<span>Spanish</span>
-</li>
-<li data-score="85">
-<div style="background-color: rgb(75, 152, 60); height: 85%;"></div>
-<span>English</span>
-</li>
-<li data-score="60">
-<div style="background-color: rgb(100, 177, 35); height: 60%;"></div>
-<span>Portuguese</span>
-</li>
-</ul>
-</article>
-</section>
-<section id="contact" class="six columns">
-<article class="right">
-<header>
-<h2>Contact</h2>
-</header>
-<p class="info">If you would like to contact me, these are the options that you have:</p>
-<ul>
-<li class="twitter"><a href="https://twitter.com/facundofarias">Twitter<span>@facundofarias</span></a></li>
-<!--<li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>-->
-<li class="mail"><a href="mailto:facundo.farias@gmail.com">Email<span>facundo.farias@gmail.com</span></a></li>
-<li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en">LinkedIn<span>Facundo Farias</span></a></li>
-<li class="skype"><a href="https://www.skype.com">Skype<span>facundo.farias</span></a></li>
-<li class="cv"><a href="./downloads/Resume_FF_2014.pdf">Resume<span>Download</span></a></li>
-</ul>
-</article>
-</section>
-</div>
+	<div class="container">
+		<header class="twelve columns">
+			<h1>Facundo Farias <span>Software Engineer</span>
+			</h1>
+		</header>
+		<section id="personaldata">
+			<ul>
+				<li class="four columns date"><span class="info">Born<span>February 11th 1985</span></span></li>
+				<li class="four columns location"><span class="info">Location<span>Barcelona, Spain</span></span></li>
+				<li class="four columns phone"><span class="info">Phone nr.<span>+34 611 339 500</span></span></li>
+			</ul>
+		</section>
+		<section id="about" class="six columns">
+			<article class="left">
+				<header>
+					<h2>About me</h2>
+				</header>
+				<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer . Now, I am on a Barcelona based startup, called <a href="http://corporate.changeyourflight.com/">CYF</a>.</p>
+				<p class="info">About me, I can say that I am a passionate developer, who enjoys agile practices and who is always willing to learn new technologies. Additionally, I spend my time acquiring more knowledge within the scope of web development.</p>
+			</article>
+			<article class="left">
+				<header>
+					<h2>About this page</h2>
+				</header>
+				<p class="info">A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
+				<ul>
+					<li class="info">It's open source available on <a href="http://github.com/facundofarias/facundofarias.github.io">GitHub</a>.</li>
+					<li class="info">The page was written purely on HTML5 code.</li>
+					<li class="info">JavaScript, jQuery and Modernizr are used.</li>
+					<li class="info">It has a responsive design that works for PC but also mobile.</li>
+				</ul>
+			</article>
+		</section>
+		<section id="programming" class="six columns float-right">
+			<article class="right">
+				<header>
+					<h2>Programming knowledge</h2>
+				</header>
+				<p class="info">Below is a list of programming languages, trends and frameworks that I know and have used the most - in regards to web development.</p>
+				<ul>
+					<li data-score="80" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
+					<li data-score="75" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
+					<li data-score="35" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
+					<li data-score="70" style="background-color: rgb(30, 107, 105);"><span>JavaScript</span></li>
+					<li data-score="55" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
+					<li data-score="55" style="background-color: rgb(40, 117, 95);"><span>PHP</span></li>
+					<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+					<li data-score="55" style="background-color: rgb(60, 137, 75);"><span>Android Development</span></li>
+					<li data-score="60" style="background-color: rgb(60, 137, 75);"><span>Web Apps</span></li>
+					<li data-score="75" style="background-color: rgb(60, 137, 75);"><span>API Design</span></li>
+				</ul>
+			</article>
+		</section>
+		<div id="history" class="clearfix">
+			<section class="six columns">
+				<article class="left">
+					<header>
+						<h2>Work experience</h2>
+					</header>
+					<ul>
+						<li><span class="year">04.14</span><span>Hired as Senior Software Engineer at <a href="http://corporate.changeyourflight.com/" title="Intel Corp">CYF</a></span></li>
+						<li><span class="year">01.11</span><span>Hired as Software Engineer at <a href="http://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
+						<li><span class="year">02.08</span><span>Started working as a Programmer Analyst on <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a>.</span></li>
+					</ul>
+				</article>
+			</section>
+			<section class="six columns">
+				<article class="right">
+					<header>
+						<h2>Education</h2>
+					</header>
+					<ul>
+						<li><span class="year">2010<span>- 2011</span></span><span>English Upper Intermediate Course. UNC, Cordoba, AR.</span></li>
+						<li><span class="year">2003 <span>- 2010</span></span><span>Bachelor's Degree - Systems Engineer. UTN FRC, Cordoba, AR</span></li>
+					</ul>
+				</article>
+			</section>
+		</div>
+		<section id="languages" class="six columns">
+			<article class="left">
+				<header>
+					<h2>Languages</h2>
+				</header>
+				<p class="info">I speak two languages ​​fluently and can make myself understood in three, as you can see below: </p>
+				<ul>
+					<li data-score="100">
+						<div style="background-color: rgb(50, 127, 85); height: 100%;"></div>
+						<span>Spanish</span>
+					</li>
+					<li data-score="85">
+						<div style="background-color: rgb(75, 152, 60); height: 85%;"></div>
+						<span>English</span>
+					</li>
+					<li data-score="60">
+						<div style="background-color: rgb(100, 177, 35); height: 60%;"></div>
+						<span>Portuguese</span>
+					</li>
+				</ul>
+			</article>
+		</section>
+		<section id="contact" class="six columns">
+			<article class="right">
+				<header>
+					<h2>Contact</h2>
+				</header>
+				<p class="info">If you would like to contact me, these are the options that you have:</p>
+				<ul>
+					<li class="twitter"><a href="https://twitter.com/facundofarias">Twitter<span>@facundofarias</span></a></li>
+					<!--<li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>-->
+					<li class="mail"><a href="mailto:facundo.farias@gmail.com">Email<span>facundo.farias@gmail.com</span></a></li>
+					<li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en">LinkedIn<span>Facundo Farias</span></a></li>
+					<li class="skype"><a href="https://www.skype.com">Skype<span>facundo.farias</span></a></li>
+					<li class="cv"><a href="./downloads/Resume_FF_2014.pdf">Resume<span>Download</span></a></li>
+				</ul>
+			</article>
+		</section>
+	</div>
 
 
 </body></html>
