Added target _blank to links

--- a/index.html
+++ b/index.html
@@ -120,12 +120,11 @@
 				</header>
 				<p class="info">If you would like to contact me, these are the options that you have:</p>
 				<ul>
-					<li class="twitter"><a href="https://twitter.com/facundofarias">Twitter<span>@facundofarias</span></a></li>
-					<!--<li class="web"><a href="https://facundofarias.github.io/">Web<span>facundofarias.github.io</span></a></li>-->
-					<li class="mail"><a href="mailto:facundo.farias@gmail.com">Email<span>facundo.farias@gmail.com</span></a></li>
-					<li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en">LinkedIn<span>Facundo Farias</span></a></li>
-					<li class="skype"><a href="https://www.skype.com">Skype<span>facundo.farias</span></a></li>
-					<li class="cv"><a href="./downloads/Resume_FF_2014.pdf">Resume<span>Download</span></a></li>
+					<li class="twitter"><a href="https://twitter.com/facundofarias" target="_blank">Twitter<span>@facundofarias</span></a></li>
+					<li class="mail"><a href="mailto:facundo.farias@gmail.com" target="_blank">Email<span>facundo.farias@gmail.com</span></a></li>
+					<li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en" target="_blank">LinkedIn<span>Facundo Farias</span></a></li>
+					<li class="skype"><a href="https://www.skype.com" target="_blank">Skype<span>facundo.farias</span></a></li>
+					<li class="cv"><a href="./downloads/Resume_FF_2014.pdf" target="_blank">Resume<span>Download</span></a></li>
 				</ul>
 			</article>
 		</section>
