Updated CV, minor changes

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 	<meta charset="utf-8">
 	<!--[if ie]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Facundo Farias - CV made with HTML5 and CSS3</title>
+	<title>Facundo Farias</title>
 	<link rel="stylesheet" href="./css/style.css">
-	<link href="./css/css" rel="stylesheet" type="text/css">
-	<script src="./js/jquery.min.js"></script><style type="text/css"></style>
+	<link href="./css/style.css" rel="stylesheet" type="text/css">
+	<link rel="icon" href="http://www.favigen.com/favicon.png">
+	<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+	<style type="text/css"></style>
 	<script src="./js/script.js"></script>
 	<!--[if lt IE 9]>
 	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,16 +32,16 @@
 				<header>
 					<h2>About me</h2>
 				</header>
-				<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a href="http://www.intel.com/">Intel Corp</a> as a Software Engineer . Now, I am on a Barcelona based startup, called <a href="http://corporate.changeyourflight.com/">CYF</a>.</p>
+				<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a target="_blank" href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a target="_blank" href="http://www.intel.com/">Intel Corp</a> as a Software Engineer . Now, I am on a Barcelona based startup, called <a target="_blank" href="http://corporate.changeyourflight.com/">CYF</a>.</p>
 				<p class="info">About me, I can say that I am a passionate developer, who enjoys agile practices and who is always willing to learn new technologies. Additionally, I spend my time acquiring more knowledge within the scope of web development.</p>
 			</article>
 			<article class="left">
 				<header>
 					<h2>About this page</h2>
 				</header>
-				<p class="info">A few months ago I realized that <a href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
+				<p class="info">A few months ago I realized that <a target="_blank" href="http://www.github.com/">GitHub</a> had a new feature and that was the possibility to create personal profiles, so I though 'It's the perfect opportunity to create my HTML5 CV'. So, here it is:</p>
 				<ul>
-					<li class="info">It's open source available on <a href="http://github.com/facundofarias/facundofarias.github.io">GitHub</a>.</li>
+					<li class="info">It's open source available on <a target="_blank" href="http://github.com/facundofarias/facundofarias.github.io">GitHub</a>.</li>
 					<li class="info">The page was written purely on HTML5 code.</li>
 					<li class="info">JavaScript, jQuery and Modernizr are used.</li>
 					<li class="info">It has a responsive design that works for PC but also mobile.</li>
@@ -55,14 +57,12 @@
 				<ul>
 					<li data-score="80" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
 					<li data-score="75" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
-					<li data-score="35" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
-					<li data-score="70" style="background-color: rgb(30, 107, 105);"><span>JavaScript</span></li>
-					<li data-score="55" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
-					<li data-score="55" style="background-color: rgb(40, 117, 95);"><span>PHP</span></li>
-					<li data-score="70" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
-					<li data-score="55" style="background-color: rgb(60, 137, 75);"><span>Android Development</span></li>
-					<li data-score="60" style="background-color: rgb(60, 137, 75);"><span>Web Apps</span></li>
-					<li data-score="75" style="background-color: rgb(60, 137, 75);"><span>API Design</span></li>
+					<li data-score="45" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
+					<li data-score="35" style="background-color: rgb(40, 117, 95);"><span>Ruby</span></li>
+					<li data-score="55" style="background-color: rgb(30, 107, 105);"><span>JavaScript</span></li>
+					<li data-score="60" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
+					<li data-score="75" style="background-color: rgb(40, 117, 95);"><span>PHP</span></li>
+					<li data-score="60" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
 				</ul>
 			</article>
 		</section>
@@ -73,9 +73,9 @@
 						<h2>Work experience</h2>
 					</header>
 					<ul>
-						<li><span class="year">04.14</span><span>Hired as Senior Software Engineer at <a href="http://corporate.changeyourflight.com/" title="Intel Corp">CYF</a></span></li>
-						<li><span class="year">01.11</span><span>Hired as Software Engineer at <a href="http://www.intel.com/" title="Intel Corp">Intel Corp</a></span></li>
-						<li><span class="year">02.08</span><span>Started working as a Programmer Analyst on <a href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a>.</span></li>
+						<li><span class="year">04.14</span><span>Hired as Senior Software Engineer at <a target="_blank" href="http://corporate.changeyourflight.com/" title="ChangeYourFlight">ChangeYourFlight</a></span></li>
+						<li><span class="year">01.11</span><span>Hired as Software Engineer at <a target="_blank" href="http://www.intel.com/" title="Intel Corporation">Intel Corporation</a></span></li>
+						<li><span class="year">02.08</span><span>Started working as a Programmer Analyst on <a target="_blank" href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a>.</span></li>
 					</ul>
 				</article>
 			</section>
@@ -85,7 +85,7 @@
 						<h2>Education</h2>
 					</header>
 					<ul>
-						<li><span class="year">2010<span>- 2011</span></span><span>English Upper Intermediate Course. UNC, Cordoba, AR.</span></li>
+						<li><span class="year">2010<span>- 2012</span></span><span>Advanced English Course. UNC, Cordoba, AR.</span></li>
 						<li><span class="year">2003 <span>- 2010</span></span><span>Bachelor's Degree - Systems Engineer. UTN FRC, Cordoba, AR</span></li>
 					</ul>
 				</article>
@@ -129,6 +129,5 @@
 			</article>
 		</section>
 	</div>
-
-
-</body></html>
+</body>
+</html>
