--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
 				</header>
 				<p class="info">Below is a list of programming languages, trends and frameworks that I know and have used the most - in regards to web development.</p>
 				<ul>
-					<li data-score="80" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
-					<li data-score="75" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
-					<li data-score="45" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
-					<li data-score="35" style="background-color: rgb(40, 117, 95);"><span>Ruby</span></li>
-					<li data-score="55" style="background-color: rgb(30, 107, 105);"><span>JavaScript</span></li>
+					<li data-score="70" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
+					<li data-score="80" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
+					<li data-score="70" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
+					<li data-score="50" style="background-color: rgb(40, 117, 95);"><span>Ruby</span></li>
+					<li data-score="60" style="background-color: rgb(30, 107, 105);"><span>JavaScript</span></li>
 					<li data-score="60" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
 					<li data-score="75" style="background-color: rgb(40, 117, 95);"><span>PHP</span></li>
-					<li data-score="60" style="background-color: rgb(60, 137, 75);"><span>SQL</span></li>
+					<li data-score="50" style="background-color: rgb(30, 107, 105);"><span>SQL</span></li>
+					<li data-score="80" style="background-color: rgb(50, 127, 85);"><span>NoSQL</span></li>
 				</ul>
 			</article>
 		</section>
