--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 				<ul>
 					<li data-score="70" style="background-color: rgb(10, 87, 125);"><span>.NET</span></li>
 					<li data-score="80" style="background-color: rgb(20, 97, 115);"><span>Java</span></li>
-					<li data-score="70" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
-					<li data-score="50" style="background-color: rgb(40, 117, 95);"><span>Ruby</span></li>
+					<li data-score="80" style="background-color: rgb(40, 117, 95);"><span>Groovy</span></li>
+					<li data-score="60" style="background-color: rgb(40, 117, 95);"><span>Ruby</span></li>
 					<li data-score="60" style="background-color: rgb(30, 107, 105);"><span>JavaScript</span></li>
 					<li data-score="60" style="background-color: rgb(50, 127, 85);"><span>Python</span></li>
-					<li data-score="75" style="background-color: rgb(40, 117, 95);"><span>PHP</span></li>
-					<li data-score="50" style="background-color: rgb(30, 107, 105);"><span>SQL</span></li>
+					<li data-score="70" style="background-color: rgb(40, 117, 95);"><span>PHP</span></li>
+					<li data-score="75" style="background-color: rgb(30, 107, 105);"><span>SQL</span></li>
 					<li data-score="80" style="background-color: rgb(50, 127, 85);"><span>NoSQL</span></li>
 				</ul>
 			</article>
@@ -86,7 +86,7 @@
 						<h2>Work experience</h2>
 					</header>
 					<ul>
-						<li><span class="year">04.14</span><span>Hired as Senior Software Engineer at <a target="_blank" href="http://corporate.changeyourflight.com/" title="ChangeYourFlight">ChangeYourFlight</a></span></li>
+						<li><span class="year">04.14</span><span>Hired as Senior Software Engineer at <a target="_blank" href="http://www.caravelo.com/" title="Caravelo">Caravelo</a></span></li>
 						<li><span class="year">01.11</span><span>Hired as Software Engineer at <a target="_blank" href="http://www.intel.com/" title="Intel Corporation">Intel Corporation</a></span></li>
 						<li><span class="year">02.08</span><span>Started working as a Programmer Analyst on <a target="_blank" href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a>.</span></li>
 					</ul>
