--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<header>
 					<h2>About me</h2>
 				</header>
-				<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a target="_blank" href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a target="_blank" href="http://www.intel.com/">Intel Corp</a> as a Software Engineer . Now, I am on a Barcelona based startup, called <a target="_blank" href="http://corporate.changeyourflight.com/">CYF</a>.</p>
+				<p class="info">I am a software developer mostly interested on mobile and web development. I first started on a local company, <a target="_blank" href="http://www.aguascordobesas.com.ar/">Aguas Cordobesas</a> as a Programmer Analyst and then I moved to <a target="_blank" href="http://www.intel.com/">Intel Corp</a> as a Software Engineer . Now, I am on a Barcelona based startup, called <a target="_blank" href="http://www.caravelo.com/">Caravelo</a>.</p>
 				<p class="info">About me, I can say that I am a passionate developer, who enjoys agile practices and who is always willing to learn new technologies. Additionally, I spend my time acquiring more knowledge within the scope of web development.</p>
 			</article>
 			<article class="left">
