--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 					<li class="mail"><a href="mailto:facundo.farias@gmail.com" target="_blank">Email<span>facundo.farias@gmail.com</span></a></li>
 					<li class="linkedin"><a href="http://www.linkedin.com/pub/facundo-farias/19/a13/a99/en" target="_blank">LinkedIn<span>Facundo Farias</span></a></li>
 					<li class="skype"><a href="https://www.skype.com" target="_blank">Skype<span>facundo.farias</span></a></li>
-					<li class="cv"><a href="./downloads/Resume_FF_2015.pdf" target="_blank">Resume<span>Download</span></a></li>
+					<li class="cv"><a href="./downloads/FF_CV_2017.pdf" target="_blank">Resume<span>Download</span></a></li>
 				</ul>
 			</article>
 		</section>
